# glpsol_trace

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md
src/: convert.cpp  convert_problem.cpp  glpsol_trace.cpp  mcfglpk.cpp
